--- a/cabañas2/owner.html
+++ b/cabañas2/owner.html
@@ -18,7 +18,7 @@
 
       <div class="topActions">
         <button id="btnReload" class="btn ghost">Recargar</button>
-        <button id="btnReset" class="btn danger">Reset total</button>
+       <!-- <button id="btnReset" class="btn danger">Reset total</button>-->
         <button id="btnLogout" class="btn ghost">Salir</button>
       </div>
     </header>
